# cproj-rs

./: Cargo.toml  README.md
src/: action.rs  arg_retriever.rs  config.rs  cproj.rs  graph.rs
src/actions/: action_chain.rs  build_project.rs  clean_project.rs  help.rs  init_project.rs  mod.rs  new_project.rs  run_project.rs
src/actions/sub_actions/: clear_directory.rs  compile_files.rs  create_directory.rs  create_file.rs  fetch_edited_files.rs  gen_dep_graph.rs  gen_src_paths.rs  has_file.rs  mod.rs  read_config.rs
