[package]
name = "cproj-rs"
version = "0.1.0"
edition = "2021"
description = "A basic c/c++ build tool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cproj"
path = "src/cproj.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
